--- a/acme/team-a-group.yaml
+++ b/acme/team-a-group.yaml
@@ -15,6 +15,28 @@ spec:
 apiVersion: backstage.io/v1alpha1
 kind: User
 metadata:
+  name: adam.hicks
+spec:
+  profile:
+    # Intentional no displayName for testing
+    email: adam.hicks@trace3.com
+    picture: https://api.dicebear.com/7.x/avataaars/svg?seed=Luna&backgroundColor=transparent
+  memberOf: [team-a]
+---
+apiVersion: backstage.io/v1alpha1
+kind: User
+metadata:
+  name: darrent.patterson
+spec:
+  profile:
+    # Intentional no displayName for testing
+    email: darren.patterson@trace3.com
+    picture: https://api.dicebear.com/7.x/avataaars/svg?seed=Luna&backgroundColor=transparent
+  memberOf: [team-a]
+---
+apiVersion: backstage.io/v1alpha1
+kind: User
+metadata:
   name: james.chandler
 spec:
   profile:
